--- a/rights-forward/Gemfile
+++ b/rights-forward/Gemfile
@@ -36,7 +36,7 @@ gem 'factory_girl'
 gem 'faker'
 gem 'omniauth-twitter'
 gem 'pry'
-gem 'ransack'
+gem 'ransack', github: 'activerecord-hackery/ransack'
 
 
 
